# mie-scattering-simulator

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONVENTIONS.md  INTERFACES.md  LITERATURE.md  MASTER_PLAN.md  Makefile  ORCHESTRATOR.md  PHYSICS.md  README.md  STATUS.md  VALIDATION.md  W1_scattering_engine.md  W2_information_detection.md  W3_literature_analysis.md  W4_validation_optimization.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/literature/: benchmarks.json  experiments.json
docs/: dissertation_comparison.md  recommendation.md
mieinfo/: __init__.py  cli.py  types.py
mieinfo/detect/: __init__.py  channels.py  metrics.py  optics.py  schemes.py
mieinfo/glmt/: __init__.py  beam.py  bsc.py  derivatives.py  scatter.py  translation.py
mieinfo/info/: __init__.py  fisher.py  modes.py
mieinfo/literature/: __init__.py  compare.py  schema.py
mieinfo/mie/: __init__.py  plane_wave.py  special.py  vswf.py
mieinfo/optimize/: __init__.py  objective.py  search.py
mieinfo/validation/: __init__.py  convergence.py  golden.py  limits.py
mieinfo/viz/: __init__.py  plots.py
mieinfo/webapp/: __init__.py  __main__.py  app.py
prototype/: golden_values.json  information_pattern.py  information_pattern_results.json  information_pattern_results_1064.json  mie_core.py  notes.md  study_detection_532.py  validate.py
tests/detect/: test_channels.py  test_metrics.py  test_optics.py  test_schemes.py
tests/glmt/: test_bsc.py  test_circular_polarization.py  test_derivatives.py  test_glmt_provider.py  test_plane_wave_provider.py  (+2 more)
(+15 files in other folders)
