[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mieinfo"
version = "0.0.1"
description = "Information radiation pattern & detection-geometry optimization for levitated microspheres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.11",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist",
    "hypothesis",
    "miepython>=3.0",   # validation oracle only; never imported by mieinfo at runtime
    "matplotlib>=3.7",
    "mypy",
    "ruff",
]

[project.scripts]
mieinfo = "mieinfo.cli:main"

[tool.setuptools.packages.find]
include = ["mieinfo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: slow tests, nightly/full lane only (VALIDATION.md §7)"]
